WIP, reworking rewards and the first test.

--- a/aintelope/analytics/plot_results.ipynb
+++ b/aintelope/analytics/plot_results.ipynb
@@ -85,8 +85,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training plots\n",
-    "Cumulative reward during training and visited squares over time."
+    "%%capture\n",
+    "'''\n",
+    "WIP, plot what the agent sees (needs changes to InferenceAgent etc.)\n",
+    "Check action values per location. Now expected reward for moving into location, but could also be\n",
+    "eating in any location, or of course mapping where the food/agents are. \n",
+    "'''\n",
+    "from aintelope.training.lightning_trainer import DQNLightning\n",
+    "import aintelope.agents\n",
+    "from aintelope.agents import get_agent_class\n",
+    "#from aintelope.agents.inference_agent import InferenceAgent\n",
+    "from aintelope.environments.savanna_gym import SavannaGymEnv\n",
+    "from omegaconf import DictConfig, OmegaConf\n",
+    "\n",
+    "cfg = OmegaConf.load(root_dir+'/aintelope/config/config_instinct_experiment.yaml')\n",
+    "\n",
+    "# load environment agent\n",
+    "env = SavannaGymEnv(env_params=cfg.hparams.env_params)\n",
+    "env.reset() #this is also init...\n",
+    "# get the brains from memory checkpoints\n",
+    "model = DQNLightning.load_from_checkpoint(latest_exp_dir+\"/checkpoints/last.ckpt\")\n",
+    "# disable randomness, dropout, etc...\n",
+    "model.eval()"
    ]
   },
   {
@@ -121,8 +141,8 @@
     "    #refactor\n",
     "    food_x.append(state[1][0])\n",
     "    food_y.append(state[1][1])\n",
-    "    food_x.append(state[2][0])\n",
-    "    food_y.append(state[2][1])    \n",
+    "    #food_x.append(state[2][0])\n",
+    "    #food_y.append(state[2][1])    \n",
     "\n",
     "    if row['instinct_events'] != '[]':\n",
     "        event_x.append(x[-1])\n",
@@ -498,6 +518,59 @@
     "        print(\"a\")\n",
     "    print(\"b\")\n",
     "print(\"haa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class a():\n",
+    "\n",
+    "    def foo(self):\n",
+    "        print('x')\n",
+    "        \n",
+    "class b(a):\n",
+    "\n",
+    "    def foo(self):\n",
+    "        a.foo(self)\n",
+    "        print('dd')\n",
+    "\n",
+    "asd = b()\n",
+    "asd.foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def vec_distance(vec_a: np.ndarray, vec_b: np.ndarray) -> np.float64:\n",
+    "    return np.linalg.norm(np.subtract(vec_a, vec_b))\n",
+    "\n",
+    "\n",
+    "def distance_to_closest_item(agent_pos: np.ndarray, items: np.ndarray) -> np.float64:\n",
+    "    if len(items.shape) == 1:\n",
+    "        items = np.expand_dims(items, 0)\n",
+    "\n",
+    "    closest_item = items[\n",
+    "        np.argmin(np.linalg.norm(np.subtract(items, agent_pos), axis=1))\n",
+    "    ]\n",
+    "    return vec_distance(closest_item, agent_pos)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distance_to_closest_item(np.array([0,1]), np.array([0,1])))"
    ]
   },
   {
