--- a/aintelope/analytics/plot_results.ipynb
+++ b/aintelope/analytics/plot_results.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -39,11 +39,10 @@
     "import dateutil.parser as dparser\n",
     "import sys\n",
     "import os\n",
-    "\n",
     "import seaborn as sns\n",
     "\n",
-    "from aintelope.training.lightning_trainer import DQNLightning\n",
-    "from aintelope.agents.memory import ReplayBuffer\n",
+    "import aintelope.training.dqn_training\n",
+    "from aintelope.training.dqn_training import ReplayMemory\n",
     "import aintelope.agents\n",
     "from aintelope.agents import get_agent_class\n",
     "#from aintelope.agents.inference_agent import InferenceAgent\n",
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hunger_20231127181536']\n"
+     ]
+    }
+   ],
    "source": [
+    "# Paths and directories\n",
     "outputs_dir = root_dir+'/outputs/' \n",
     "available_records = os.listdir(outputs_dir)\n",
     "print(\"Existing training runs\", available_records)\n",
+    "conf_dir = root_dir+'/aintelope/config/config_experiment.yaml'\n",
     "\n",
+    "available_records = os.listdir(outputs_dir)\n",
     "dirs = [os.path.join(outputs_dir, f) for f in available_records] # add path to each file\n",
     "dirs.sort(key=lambda x: os.path.getmtime(x))\n",
     "assert len(dirs) > 0, \"No trainings have been run! make run-training* first\"\n",
@@ -105,6 +115,27 @@
     "        models[mode] = []\n",
     "    models[mode].append(runs_dir)\n",
     "#print(models)"
+    "latest_exp_dir = dirs[-1] #arbitrary use of latest\n",
+    "\n",
+    "print(available_records)\n",
+    "\n",
+    "#last_checkpoint = latest_exp_dir+\"/checkpoints/last.ckpt\"\n",
+    "\n",
+    "# Load a model for evaluation\n",
+    "def load_checkpoint(PATH):\n",
+    "    #https://pytorch.org/tutorials/recipes/recipes/saving_and_loading_a_general_checkpoint.html\n",
+    "    model = Net()\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "    checkpoint = torch.load(PATH)\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    #epoch = checkpoint['epoch']\n",
+    "    #loss = checkpoint['loss']\n",
+    "\n",
+    "    model.eval()\n",
+    "    return model\n",
+    "    \n"
    ]
   },
   {
@@ -120,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latest_exp_dir = dirs[0]\n",
+    "\n",
     "print(latest_exp_dir)\n",
     "print(dparser.parse(latest_exp_dir,fuzzy=True))\n",
     "df = pd.read_csv(latest_exp_dir+\"/memory_records.csv\")\n",
@@ -145,9 +176,7 @@
     "env = SavannaGymEnv(env_params=cfg.hparams.env_params)\n",
     "env.reset() #this is also init...\n",
     "# get the brains from memory checkpoints\n",
-    "model = DQNLightning.load_from_checkpoint(latest_exp_dir+\"/checkpoints/last.ckpt\")\n",
-    "# disable randomness, dropout, etc...\n",
-    "model.eval()"
+    "model = load_checkpoint(last_checkpoint)"
    ]
   },
   {
@@ -237,7 +266,7 @@
    "outputs": [],
    "source": [
     "# plot reward received over time\n",
-    "df['reward'].plot()\n"
+    "df['reward'].plot()"
    ]
   },
   {
@@ -287,9 +316,7 @@
     "env = SavannaGymEnv(env_params=cfg.hparams.env_params)\n",
     "env.reset() #this is also init...\n",
     "# get the brains from memory checkpoints\n",
-    "model = DQNLightning.load_from_checkpoint(latest_exp_dir+\"/checkpoints/last.ckpt\")\n",
-    "# disable randomness, dropout, etc...\n",
-    "model.eval()"
+    "model = load_checkpoint(latest_exp_dir+\"/checkpoints/\") # FIXME was last.cktp"
    ]
   },
   {
@@ -374,19 +401,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run each model for 10 different resets, with 10 different locations on the map.\n",
-    "# Gather the cumulative reward, -1 has to be given on each step though\n",
-    "# reset each time the food is found\n",
-    "def testrun(model,env,cfg, samples, test_length):\n",
-    "    agent = get_agent_class(cfg.hparams.agent_id)(\n",
-    "        env,\n",
-    "        ReplayBuffer(cfg.hparams.replay_size),\n",
+    "def testrun(model,env):\n",
+    "    # Run each model for 10 different resets, with 10 different locations on the map.\n",
+    "    # Gather the cumulative reward, -1 has to be given on each step though\n",
+    "    # Or reset each time the food is found?\n",
+    "    \n",
+    "    action_space = env.action_space\n",
+    "    observation, info = env.reset()\n",
+    "    n_observations = len(observation)\n",
+    "\n",
+    "    trainer = Trainer(\n",
+    "        cfg, n_observations, action_space\n",
+    "    ) \n",
+    "    get_agent_class(cfg.hparams.agent_id)(\n",
     "        0,\n",
-    "        **cfg.hparams.agent_params, #paskaa ei ole list\n",
+    "        trainer,\n",
+    "        0,#cfg.hparams.warm_start_steps,\n",
+    "        **cfg.hparams.agent_params,\n",
     "    )\n",
     "    epsilon = 0.0\n",
     "    device = \"cpu\"\n",
@@ -407,9 +442,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb#X30sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m env \u001b[39m=\u001b[39m SavannaGymEnv(env_params\u001b[39m=\u001b[39mcfg\u001b[39m.\u001b[39mhparams\u001b[39m.\u001b[39menv_params)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb#X30sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(models)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb#X30sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m results \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros([\u001b[39mlen\u001b[39m(models),\u001b[39mlen\u001b[39m(models[\u001b[39m0\u001b[39;49m])])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb#X30sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m rewards \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/joel/project/aintelope/aintelope/analytics/plot_results.ipynb#X30sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(models)): \u001b[39m# statistical significance\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "%%capture\n",
     "# Load the models from checkpoints and run them through test envs to measure their performance \n",
@@ -474,13 +521,31 @@
     "    if instinct_name not in available_instincts_dict:\n",
     "        print(\"haa\")\n",
     "print(i_agent.target_instincts)"
+    "results = np.zeros([len(models),len(models[0])])\n",
+    "rewards = []\n",
+    "for i in range(len(models)): # statistical significance\n",
+    "    for j in range(len(models[0])): # number of epochs per run\n",
+    "        model = load_checkpoint(models[i][j])\n",
+    "        model.eval()\n",
+    "        # run model\n",
+    "        result, reward = testrun(model, env)\n",
+    "        rewards.append(reward)\n",
+    "        results[i,j] = sum(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/joel/project/aintelope/outputs/hunger_20231127181536']\n"
+     ]
+    }
+   ],
    "source": [
     "def combine_dims(a, start=0, count=2):\n",
     "    \"\"\" Reshapes numpy array a by combining count dimensions, \n",
@@ -711,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
