--- a/aintelope/analytics/plot_results.ipynb
+++ b/aintelope/analytics/plot_results.ipynb
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%capture\n",
+    "# %%capture\n",
     "# Style | epoch x 4-corners x repetition\n",
     "# Two np arrays with [10,4,10] dimensions\n",
     "# Style=baseline or instinct, 4-corners is in above the different starting positions\n",
@@ -550,6 +550,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "print(type(np.zeros(4).shape))"
    ]
   },
@@ -561,19 +562,19 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "a = [[1,2],[2,3]]\n",
-    "b = [[1,1],[12,31]]\n",
-    "df = pd.DataFrame(a,columns=[\"R\",\"S\"])\n",
-    "dff = pd.DataFrame(b,columns=[\"R\",\"S\"])\n",
+    "a = [[1, 2], [2, 3]]\n",
+    "b = [[1, 1], [12, 31]]\n",
+    "df = pd.DataFrame(a, columns=[\"R\", \"S\"])\n",
+    "dff = pd.DataFrame(b, columns=[\"R\", \"S\"])\n",
     "\n",
-    "names = [1,11]\n",
-    "frames = [df,dff]\n",
-    "#for i in range(5):\n",
+    "names = [1, 11]\n",
+    "frames = [df, dff]\n",
+    "# for i in range(5):\n",
     "#    names.append(i)\n",
-    "s = pd.concat([df,dff],names)\n",
-    "#ff = pd.MultiIndex([df,dff],names=df.columns)\n",
+    "s = pd.concat([df, dff], names)\n",
+    "# ff = pd.MultiIndex([df,dff],names=df.columns)\n",
     "\n",
-    "#print(s)"
+    "# print(s)"
    ]
   },
   {
@@ -584,7 +585,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "a = np.ones((2,2,2))\n",
+    "a = np.ones((2, 2, 2))\n",
     "b = pd.MultiIndex(a)\n",
     "print(b)\n",
     "print(b.shape)"
@@ -596,14 +597,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys = ['run','ag','r']\n",
-    "data = {'run': [1,1,2,2,3,3], 'ag': [1,2,1,2,1,2], 'r': [2,3,1,4,7,8],'s': [2,3,1,4,7,8]}\n",
-    "df = pd.DataFrame(data=data) \n",
-    "#d = {'col1': [1, 2], 'col2': [3, 4], 'col3': [3,3]}\n",
+    "keys = [\"run\", \"ag\", \"r\"]\n",
+    "data = {\n",
+    "    \"run\": [1, 1, 2, 2, 3, 3],\n",
+    "    \"ag\": [1, 2, 1, 2, 1, 2],\n",
+    "    \"r\": [2, 3, 1, 4, 7, 8],\n",
+    "    \"s\": [2, 3, 1, 4, 7, 8],\n",
+    "}\n",
+    "df = pd.DataFrame(data=data)\n",
+    "# d = {'col1': [1, 2], 'col2': [3, 4], 'col3': [3,3]}\n",
     "\n",
-    "#df = pd.DataFrame(data=d)\n",
+    "# df = pd.DataFrame(data=d)\n",
     "print(df)\n",
-    "#print(data,d)\n"
+    "# print(data,d)"
    ]
   },
   {
@@ -612,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(['ag'])['r','s'].mean()"
+    "df.groupby([\"ag\"])[\"r\", \"s\"].mean()"
    ]
   },
   {
@@ -637,7 +643,9 @@
    "source": [
     "record_path = \"/home/joel/project/aintelope/outputs/20240214180755/\"\n",
     "events_filename = \"events.csv\"\n",
-    "events = recording.read_events(\"/home/joel/project/aintelope/outputs/20240214180755/\", \"events.csv\")"
+    "events = recording.read_events(\n",
+    "    \"/home/joel/project/aintelope/outputs/20240214180755/\", \"events.csv\"\n",
+    ")"
    ]
   },
   {
@@ -650,7 +658,7 @@
     "\n",
     "for path in Path(record_path).rglob(events_filename):\n",
     "    print(path)\n",
-    "    events.append(pd.read_csv(path))\n"
+    "    events.append(pd.read_csv(path))"
    ]
   },
   {
@@ -659,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss = plotting.plot_performance(events,\".\")"
+    "ss = plotting.plot_performance(events, \".\")"
    ]
   },
   {
@@ -668,7 +676,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "keys = [\"Run_id\", \"Episode\", \"Agent_id\", \"Reward\", \"Score\"]\n",
     "data = pd.DataFrame(columns=keys)\n",
     "for event in events:\n",
@@ -683,7 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
+    "\"\"\"\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(8, 4), sharey=True)\n",
     "axs[0].boxplot(b_r, labels=X)\n",
     "axs[0].set_title(\"Baseline\")\n",
@@ -699,13 +706,13 @@
     "# plt.title(\"Reward comparison\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "'''\n",
+    "\"\"\"\n",
     "\n",
     "fig = plt.figure()\n",
-    "plt.plot(dd[['Reward','Score']].to_numpy())\n",
+    "plt.plot(dd[[\"Reward\", \"Score\"]].to_numpy())\n",
     "plt.xlabel(\"Episode\")\n",
     "plt.ylabel(\"Mean Reward\")\n",
-    "plt.legend('RS')\n",
+    "plt.legend(\"RS\")\n",
     "plt.show()\n",
     "\n",
     "# Fix steps so that it geos 1...1000 instead of 1..200 1..200\n",
@@ -719,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd[['Reward','Score']]"
+    "dd[[\"Reward\", \"Score\"]]"
    ]
   },
   {
